--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 👈 This line is critical for mobile responsiveness -->
     <title>User Details Form</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
@@ -13,6 +19,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 10px;
         }
 
         .form-container {
@@ -20,7 +27,8 @@
             padding: 25px 30px;
             border-radius: 12px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 320px;
+            width: 100%;
+            max-width: 320px;
         }
 
         h2 {
@@ -51,11 +59,76 @@
         button:hover {
             background-color: #472e8e;
         }
+
+        @media (max-width: 400px) {
+            .form-container {
+                padding: 20px;
+            }
+
+            h2 {
+                font-size: 18px;
+            }
+
+            input[type="text"],
+            button {
+                font-size: 15px;
+            }
+        }
+
+
+
+        .toast {
+            position: fixed;
+            top: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #f44949;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            opacity: 0;
+            visibility: hidden;
+            z-index: 1000;
+            transition: all 0.5s ease;
+        }
+
+        @keyframes slideDown {
+            0% {
+                top: -100px;
+                opacity: 0;
+            }
+
+            100% {
+                top: 20px;
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideUp {
+            0% {
+                top: 20px;
+                opacity: 1;
+            }
+
+            100% {
+                top: -100px;
+                opacity: 0;
+            }
+        }
+
+        .show {
+            animation: slideDown 0.5s forwards;
+            visibility: visible;
+        }
+
+        .hide {
+            animation: slideUp 0.5s forwards;
+            visibility: hidden;
+        }
     </style>
 </head>
 
 <body>
-
     <div class="form-container">
         <h2>User Details</h2>
         <form>
@@ -66,6 +139,8 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    <div class="toast hide"></div>
+
     <script src="Form.js"></script>
 </body>
 
