--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 👈 This line is critical for mobile responsiveness -->
-    <title>User Details Form</title>
+    <title>Lead Generation Form</title>
     <style>
         * {
             box-sizing: border-box;
@@ -130,7 +130,7 @@
 
 <body>
     <div class="form-container">
-        <h2>User Details</h2>
+        <h2>Lead Form</h2>
         <form>
             <input type="text" placeholder="First Name" required />
             <input type="text" placeholder="Last Name" required />
